fix(utilities): Use 'block' instead of 'initial' for visible and hidden components

--- a/scss/utilities/hidden/hidden.scss
+++ b/scss/utilities/hidden/hidden.scss
@@ -18,7 +18,7 @@
 
   @each $breakpoint, $width in $breakpoints {
     &\@#{$breakpoint} {
-      display: initial;
+      display: block;
 
       @include breakpoint($breakpoint) {
         display: none;
