--- a/scss/utilities/visible/visible.scss
+++ b/scss/utilities/visible/visible.scss
@@ -14,14 +14,14 @@
 //
 // Style guide: Utilities.Visible
 .visible {
-  display: initial;
+  display: block;
 
   @each $breakpoint, $width in $breakpoints {
     &\@#{$breakpoint} {
       display: none;
 
       @include breakpoint($breakpoint) {
-        display: initial;
+        display: block;
       }
     }
   }
